# medical_speech_to_text

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  generate_test_audio.py  pyproject.toml
examples/: expected_output.json
prompts/: clinical_extraction.txt
scripts/: create_sample_audio.py  download_models.py  verify_setup.sh
src/medical_transcription/: __init__.py  app.py  config.py  main.py
src/medical_transcription/agent/: __init__.py  graph.py  medical_agent.py  nodes.py  prompts.py  state.py  tools.py
src/medical_transcription/core/: __init__.py  audio_processor.py  llm_extractor.py  transcriber.py
src/medical_transcription/llm/: base.py  ollama_provider.py  provider_factory.py
tests/: __init__.py  conftest.py
tests/unit/: test_audio_processor.py  test_clinical_summary.py  test_config.py  test_input_validation.py  test_ollama_provider.py  test_provider_factory.py
